--- a/lab/lab.html
+++ b/lab/lab.html
@@ -55,14 +55,16 @@
 
 		.ch-status{
 			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-			font-size: 1.5em;
+			font-size: 3em;
+			font-weight: 400;
 			position: absolute;
 			bottom: 0;
 			right: 0;
 			padding: 10px;
 			z-index: 2;
 			color: white;
-			text-shadow: #000000 2px 2px 4px;
+			text-shadow: 0 0 8px #000000, 0 0 12px #000000, 0 3px 6px rgba(0,0,0,0.9), 0 6px 12px rgba(0,0,0,0.8);
+			opacity: 0.7;
 		}
 		.ch-controls{
 			position: absolute;
@@ -92,7 +94,8 @@
 	<div id="main" class="ch-container">
     <div class="ch-background"><img src="20250525_104503.jpg"></div>
     <div class="ch-image"><img src="20250525_104503.jpg"></div>
-	<div class="ch-controls">
+	<div class="ch-status">2025/Sample Longer Text</div>
+	<div class="ch-controls" style="display: none;">
         <button class="ch-button ch-button-prev" type="button">
             <svg xmlns="http://www.w3.org/2000/svg" height="80%" fill="#444444" viewBox="0 0 512 512">
             <path
